--- a/src/main/resources/assets/chocolate_bar/lang/en_us.json
+++ b/src/main/resources/assets/chocolate_bar/lang/en_us.json
@@ -1,5 +1,6 @@
 {
     "item.chocolate_bar.chocolate_bar": "Chocolate Bar",
+    "item.chocolate_bar.chocolate_bar_zoomies": "Chocolate Bar Zoomies",
     "item.chocolate_bar.quilty_wrapping_paper": "Quilt Wrapping Paper",
     "item.chocolate_bar.toolchain_wrapping_paper": "Toolchain Wrapping Paper"
 }
